@@ -3,6 +3,8 @@ package searchengine.services.impl;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import searchengine.config.SiteInfo;
+import searchengine.config.SitesList;
 import searchengine.dto.statistics.DetailedStatisticsItem;
 import searchengine.dto.statistics.StatisticsData;
 import searchengine.dto.statistics.StatisticsResponse;
@@ -14,6 +16,7 @@ import searchengine.repository.PageRepository;
 import searchengine.repository.SiteRepository;
 import searchengine.services.StatisticsService;
 
+import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.util.List;
 import java.util.Optional;
@@ -24,30 +27,30 @@ import java.util.stream.Collectors;
 public class StatisticsServiceImpl implements StatisticsService {
 
     private final SiteRepository siteRepository;
+
     private final PageRepository pageRepository;
+
     private final LemmaRepository lemmaRepository;
+
+    private final SitesList sitesList;
 
     @Override
     @Transactional(readOnly = true)
     public StatisticsResponse getStatistics() {
         List<Site> sites = siteRepository.findAll();
 
-        TotalStatistics total = buildTotalStatistics(sites);
-        List<DetailedStatisticsItem> detailed = buildDetailedStatistics(sites);
-
         StatisticsData data = new StatisticsData();
-        data.setTotal(total);
-        data.setDetailed(detailed);
+        data.setTotal(buildTotalStatistics(sites));
+        data.setDetailed(buildDetailedStatistics(sites));
 
         StatisticsResponse response = new StatisticsResponse();
-        response.setStatistics(data);
         response.setResult(true);
-
+        response.setStatistics(data);
         return response;
     }
 
     private TotalStatistics buildTotalStatistics(List<Site> sites) {
-        int totalSites = sites.size();
+        int totalSites = sitesList.getSites().size();
         int totalPages = (int) pageRepository.count();
         int totalLemmas = Optional.ofNullable(lemmaRepository.countAllLemmas()).orElse(0);
         boolean isIndexing = sites.stream().anyMatch(site -> site.getStatus() == SiteStatus.INDEXING);
@@ -57,25 +60,45 @@ public class StatisticsServiceImpl implements StatisticsService {
         total.setPages(totalPages);
         total.setLemmas(totalLemmas);
         total.setIndexing(isIndexing);
-
         return total;
     }
 
     private List<DetailedStatisticsItem> buildDetailedStatistics(List<Site> sites) {
-        return sites.stream()
-                .map(site -> {
+        return sitesList.getSites().stream()
+                .map(configSite -> {
+                    Optional<Site> optionalSite = sites.stream()
+                            .filter(site -> site.getUrl().equals(configSite.getUrl()))
+                            .findFirst();
+
                     DetailedStatisticsItem item = new DetailedStatisticsItem();
-                    item.setName(site.getName());
-                    item.setUrl(site.getUrl());
-                    item.setPages(pageRepository.countBySite(site));
-                    item.setLemmas(Optional.ofNullable(lemmaRepository.countLemmasByWebSite(site)).orElse(0));
-                    item.setStatus(site.getStatus().name());
-                    item.setStatusTime(site.getStatusTime().toEpochSecond(ZoneOffset.UTC));
-                    if (site.getLastError() != null && !site.getLastError().isBlank()) {
-                        item.setError(site.getLastError());
+                    item.setName(configSite.getName());
+                    item.setUrl(configSite.getUrl());
+
+                    if (optionalSite.isPresent()) {
+                        Site site = optionalSite.get();
+                        item.setPages(pageRepository.countBySite(site));
+                        item.setLemmas(Optional.ofNullable(lemmaRepository.countLemmasByWebSite(site)).orElse(0));
+                        item.setStatus(site.getStatus().name());
+
+                        LocalDateTime statusTime = site.getStatusTime() != null
+                                ? site.getStatusTime()
+                                : LocalDateTime.now();
+                        item.setStatusTime(statusTime.toEpochSecond(ZoneOffset.ofHours(-4)));
+
+                        String error = Optional.ofNullable(site.getLastError())
+                                .filter(err -> !err.isBlank())
+                                .orElse("-");
+                        item.setError(error);
+                    } else {
+                        item.setPages(0);
+                        item.setLemmas(0);
+                        item.setStatus("NOT INDEXED YET");
+                        item.setStatusTime(LocalDateTime.now().toEpochSecond(ZoneOffset.ofHours(-4)));
+                        item.setError("N/A");
                     }
+
                     return item;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 }
